--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
 	</main>
 	<footer class="footer-container flex-row-center">
 		<h1 class="footer-h"><a href="https://rafaelsouzars.github.io" target="_blank">Rafael Souza</a> - 2024<h1>
-	</footer>
-</body>
-	<script src="assets/js/scripts.js"></script>
+	</footer>	
+</body>	
+	<script src="assets/js/ClientHTTPClass.js"></script>
+	<script src="assets/js/scripts.js"></script>		
 </html>
